<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="history_txt">...</string>
    <string name="screen_txt"></string>
    <string name="clear_btn_txt">Clear</string>
    <string name="back_btn_txt">Del</string>
    <string name="sign_btn_txt">+/-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_decimal">.</string>
    <string name="div_btn_txt">/</string>
    <string name="mult_btn_txt">*</string>
    <string name="minus_btn_txt">-</string>
    <string name="plus_btn_txt">+</string>
    <string name="equals_btn_txt">=</string>
</resources>
