<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/tblLayout"
    android:stretchColumns="0,1,2,3"
    android:shrinkColumns="0,1,2,3"
    android:background="#ffb8b8b8">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:background="#ff9a9a9a">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_txt"
            android:id="@+id/historyTxt"
            android:layout_span="4"
            android:layout_gravity="left"
            android:autoText="true"
            android:textColor="#ff010101" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="247"
            android:id="@+id/screenTxt"
            android:layout_span="4"
            android:background="@android:color/background_dark"
            android:height="50dp"
            android:gravity="center_vertical|end"
            android:singleLine="false"
            android:textColor="#ffffffff"
            android:textSize="14pt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_btn_txt"
            android:id="@+id/clearBtn"
            android:layout_span="2"
            android:layout_column="0"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_btn_txt"
            android:id="@+id/backBtn"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_btn_txt"
            android:id="@+id/signButton"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_7"
            android:id="@+id/btn7"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_8"
            android:id="@+id/btn8"
            android:layout_column="1"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_9"
            android:id="@+id/btn9"
            android:layout_column="2"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_btn_txt"
            android:id="@+id/divBtn"
            android:layout_column="3"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_4"
            android:id="@+id/btn4"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_5"
            android:id="@+id/btn5"
            android:layout_column="1"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_6"
            android:id="@+id/btn6"
            android:layout_column="2"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mult_btn_txt"
            android:id="@+id/multBtn"
            android:layout_column="3"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_1"
            android:id="@+id/btn1"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_2"
            android:id="@+id/btn2"
            android:layout_column="1"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_3"
            android:id="@+id/btn3"
            android:layout_column="2"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_btn_txt"
            android:id="@+id/minusBtn"
            android:layout_column="3"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_0"
            android:id="@+id/btn0"
            android:layout_column="0"
            android:layout_span="2"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_decimal"
            android:id="@+id/decimalBtn"
            android:layout_column="2"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_btn_txt"
            android:id="@+id/plusBtn"
            android:layout_column="3"
            android:textStyle="bold"
            android:textSize="10pt"
            style="@android:style/Widget.Button.Inset" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals_btn_txt"
            android:id="@+id/equalsBtn"
            android:layout_column="0"
            android:layout_span="4"
            android:textStyle="bold"
            android:textSize="14pt"
            style="@android:style/Widget.Button.Inset" />
    </TableRow>
</TableLayout>
